--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,59 +5,45 @@
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'script', 'data-turbolinks-track': 'reload' %>
+
 </head>
 
-<body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>SkyWay - Room example</title>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'script', 'data-turbolinks-track': 'reload' %>
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="heading">Room example</h1>
+      <p class="note">
+        Change Room mode (before join in a room):
+        <a href="#">mesh</a> / <a href="#sfu">sfu</a>
+      </p>
+      <div class="room">
+        <div>
+          <video id="js-local-stream"></video>
+          <span id="js-room-mode"></span>:
+          <input type="text" placeholder="Room Name" id="js-room-id">
+          <button id="js-join-trigger">Join</button>
+          <button id="js-leave-trigger">Leave</button>
+        </div>
 
-<div class="pure-g">
+        <div class="remote-streams" id="js-remote-streams"></div>
 
-    <!-- Video area -->
-    <div class="pure-u-2-3" id="video-container">
-        <video id="their-video" autoplay></video>
-        <video id="my-video" muted="true" autoplay></video>
+        <div>
+          <pre class="messages" id="js-messages"></pre>
+          <input type="text" id="js-local-text">
+          <button id="js-send-trigger">Send</button>
+        </div>
+      </div>
+      <p class="meta" id="js-meta"></p>
     </div>
-
-    <!-- Steps -->
-    <div class="pure-u-1-3">
-        <h2>SkyWay Video Chat</h2>
-
-        <div class="select">
-            <label for="audioSource">Audio input source: </label><select id="audioSource"></select>
-        </div>
-
-        <div class="select">
-            <label for="videoSource">Video source: </label><select id="videoSource"></select>
-        </div>
-
-        <!-- Get local audio/video stream -->
-        <div id="step1">
-            <p>Please click `allow` on the top of the screen so we can access your webcam and microphone for calls.</p>
-            <div id="step1-error">
-                <p>Failed to access the webcam and microphone. Make sure to run this demo on an http server and click allow when asked for permission by the browser.</p>
-                <a href="#" class="pure-button pure-button-error" id="step1-retry">Try again</a>
-            </div>
-        </div>
-
-        <!-- Make calls to others -->
-        <div id="step2">
-            <p>Your id: <span id="my-id">...</span></p>
-            <p>Share this id with others so they can call you.</p>
-            <h3>Make a call</h3>
-            <form id="make-call" class="pure-form">
-                <input type="text" placeholder="Call user id..." id="callto-id">
-                <button href="#" class="pure-button pure-button-success" type="submit">Call</button>
-            </form>
-        </div>
-
-        <!-- Call in progress -->
-        <div id="step3">
-            <p>Currently in call with <span id="their-id">...</span></p>
-            <p><a href="#" class="pure-button pure-button-error" id="end-call">End call</a></p>
-        </div>
-    </div>
-</div>
-
-
-</body>
+    <script src="//cdn.webrtc.ecl.ntt.com/skyway-4.3.0.js"></script>
+    <%= javascript_pack_tag 'script', 'data-turbolinks-track': 'reload' %>
+  </body>
 </html>
