--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,10 @@
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>SkyWay - Video chat example</title>
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-
-</head>
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SkyWay - Room example</title>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'script', 'data-turbolinks-track': 'reload' %>
+    
   </head>
   <body>
     <div class="container">
@@ -44,6 +33,12 @@
       <p class="meta" id="js-meta"></p>
     </div>
     <script src="//cdn.webrtc.ecl.ntt.com/skyway-4.3.0.js"></script>
-    <%= javascript_pack_tag 'script', 'data-turbolinks-track': 'reload' %>
+    <script src="../_shared/key.js"></script>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag 'script', 'data-turbolinks-track': 'reload' %>
   </body>
 </html>
+    
+
+
+    
