--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,11 +16,11 @@
             <%= f.text_field :email, class: 'form-control' %>
           </div>
           <div class="form-group">
-            <%= f.label :password, class: 'sing-in-container' %>
+            <%= f.label :パスワード, class: 'sing-in-container' %>
             <%= f.password_field :password, class: 'form-control' %>
           </div>
           <div class="form-group">
-            <%= f.label :password再入力, class: 'sing-in-container' %>
+            <%= f.label :パスワード再入力, class: 'sing-in-container' %>
             <%= f.password_field :password_confirmation, class: 'form-control' %>
           </div>
           <div class="form-group">
