--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -29,7 +29,7 @@
           </div>
           <%= f.submit "登録", class: 'btn-block btn-white' %>
         <% end %>
-        <%= link_to 'ログインはこちら',  '#', class: 'sing-in-container' %>
+        <%= link_to 'ログインはこちら',  login_path , class: 'sing-in-container' %>
       </div>
     </div>
 </div>
