--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,35 +1,31 @@
-<h1>DM</h1>
 
-<h4>参加者</h4>
-<% @entries.each do |e| %>
-  <h5><strong><a href="/users/<%= e.user.id %>"><%= e.user.name%>さん</a></strong></h5>
-<% end %>
+<div class="dm-content">
+  <h3>ダイレクトメッセージ</h3>
+    <h4>参加者</h4>
+      <% @entries.each do |e| %>
+        <h5><strong><a href="/users/<%= e.user.id %>"><%= e.user.name%>さん</a></strong></h5>
+      <% end %>
+    <hr>
+    <% if @messages.present? %>
+      <% @messages.each do |m| %>
+        <% if m.user_id == current_user.id %>
+            <div class="current_user">
+                <strong class="current_user"><%= m.content %></strong>
+            </div>
+        <% else %>
+            <div class="visited_user">
+                <strong class="visited_user"><%= m.content %></strong>
+            </div>
+        <% end %>
+      <% end %>
+        <% else %>
+          <h3 class="text-center">メッセージはまだありません</h3>
+        <% end %>
 
-<hr>
-<% if @messages.present? %>
-  <% @messages.each do |m| %>
-    <% if m.user_id == current_user.id %>
-        <div class="current_user">
-            <strong class="current_user"><%= m.content %></strong>
-
-        </div>
-    <% else %>
-        <div class="visited_user">
-            <strong class="visited_user"><%= m.content %></strong>
-
-        </div>
+    <%= form_for @message do |f| %>
+      <%= f.text_field :content, :placeholder => "メッセージを入力して下さい" , :size => 70 %>
+      <%= f.hidden_field :chat_id, :value => @chat.id %>
+      <%= f.submit "投稿する" %>
     <% end %>
-
-  <% end %>
-<% else %>
-  <h3 class="text-center">メッセージはまだありません</h3>
-<% end %>
-
-<%= form_for @message do |f| %>
-  <%= f.text_field :content, :placeholder => "メッセージを入力して下さい" , :size => 70 %>
-  <%= f.hidden_field :chat_id, :value => @chat.id %>
-
-  <%= f.submit "投稿する" %>
-<% end %>
-
-<%= link_to "TOPに戻る", "/pages/index" %>
+    <%= link_to "DM一覧に戻る", "/chats/" %>
+</div>
