--- a/app/views/yugiohs/index.html.erb
+++ b/app/views/yugiohs/index.html.erb
@@ -21,8 +21,12 @@
           <span>マジックギャザリー </span>
         <% end %>
     </div>  
-            <%= link_to "投稿", "/yugiohs/new" ,class: 'btn  btn-white'%>
-            <div class ="play-user-vs">対戦プレイヤーを探そう！</div>
+      <% if logged_in? %>
+        <div class="new-post">
+          <%= link_to "投稿", "/yugiohs/new" ,class: 'btn  btn-white'%>
+        </div>
+      <% end %>
+      <div class ="play-user-vs">対戦プレイヤーを探そう！</div>
 　　        <%# 対戦できるユーザー表示ユーザーの情報を載せる %>
       <div class = "post-user-content">
         <% @yugiohs.each do |yugioh| %>
@@ -30,6 +34,8 @@
             <%= link_to user_path(yugioh.user_id) do %>
               <% if yugioh.user.image? %>
                 <%= image_tag yugioh.user.image.url,class:"icon-image" %>
+              <% else %>
+                <%=image_tag"default.png",class:"icon-image" %>
               <% end %>
             <% end %>
               <div class="user-post-name">
