--- a/app/views/yugiohs/new.html.erb
+++ b/app/views/yugiohs/new.html.erb
@@ -14,7 +14,7 @@
           </div>
           
           <div class="form-group">
-            <%= f.label :description %>
+            <%= f.label :コメント %>
             <%= f.text_area :description, class: 'form-control' %>
           </div>
 　        <% if logged_in? %>
